# fastlio-go2w

./: .dockerignore  .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  configure_git_safe_directory.sh  devcontainer.json  postCreate.sh
catmux/: fastlio.yaml  record_raw.yaml
config/: cyclonedds.xml
config/sensor/: go2w_mid360_calibration.yaml
docker/: Dockerfile  run.sh
docker/robot/: Dockerfile  run.sh
docs/: offline-result-artifacts.md
docs/experiments/: issue-7-mid360-xt16.md
humble_ws/src/fastlio_go2w_bringup/: math_utils.py  odom_adapter.py  package.xml  setup.cfg  setup.py
humble_ws/src/fastlio_go2w_bringup/config/: MID360_config.json  mid360_go2w.yaml  mid360_go2w_accuracy.yaml  mid360_go2w_accuracy_dense_false.yaml  mid360_go2w_accuracy_offline.yaml  mid360_go2w_viz_dense.yaml  mid360_offline_eval.yaml  mid360_xt16_fused.yaml  mid360_xt16_fused_accuracy_dense_false.yaml  mid360_xt16_fused_accuracy_offline.yaml
humble_ws/src/fastlio_go2w_bringup/launch/: bringup.launch.py  check_tf.launch.py  fastlio.launch.py  offline_fastlio.launch.py  offline_multilidar.launch.py  replay.launch.py  robot_description.launch.py  sensors.launch.py
humble_ws/src/fastlio_go2w_bringup/rviz/: check_tf.rviz  fastlio.rviz
humble_ws/src/fastlio_go2w_bringup/src/fastlio_go2w_bringup/: math_utils.py  odom_adapter.py
humble_ws/src/fastlio_go2w_bringup/test/: test_math_utils.py
humble_ws/src/fastlio_go2w_fusion/: CMakeLists.txt  README.md  package.xml
humble_ws/src/fastlio_go2w_fusion/include/fastlio_go2w_fusion/: fusion_core.hpp  pointcloud_parser.hpp
humble_ws/src/fastlio_go2w_fusion/src/: dual_lidar_fusion_node.cpp  fusion_core.cpp  pointcloud_parser.cpp
humble_ws/src/fastlio_go2w_fusion/test/: test_fusion_core.cpp  test_pointcloud_parser.cpp
humble_ws/src/go2w_description/urdf/: go2w_description.urdf
scripts/: build_ws.sh  setup_ws.sh
scripts/diagnostics/: check_livox_time_type.py  check_tf.sh
scripts/fastlio/: check_tf.sh  live_rviz.sh  replay.sh
scripts/offline/: analyze_fastlio_run.py  analyze_multilidar_run.py  publish_fastlio_artifacts.py  publish_multilidar_artifacts.py  publish_offline_frame_alignment.py  replay_fastlio_artifacts.py  run_fastlio_offline.sh  run_multilidar_experiment.sh  sample_process_metrics.py  test_analyze_fastlio_run.py  test_analyze_multilidar_run.py  test_offline_configs.py  test_publish_fastlio_artifacts.py  test_publish_multilidar_artifacts.py  test_publish_offline_frame_alignment.py  test_replay_fastlio_artifacts.py  visualize_fastlio_run.sh  visualize_multilidar_run.sh
scripts/offline/rviz/: offline_result.rviz
