<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastlio_go2w_bringup</name>
  <version>0.1.0</version>
  <description>FAST-LIO bringup for GO2-W with Livox MID-360.</description>
  <maintainer email="67k.tanaka@gmail.com">Koki Tanaka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fast_lio</depend>
  <depend>livox_ros_driver2</depend>
  <depend>go2w_description</depend>

  <depend>python3-numpy</depend>
  <exec_depend>python3-setuptools</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-numpy</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
